# amethyst-inspector

./: Cargo.toml
src/: hierarchy.rs  lib.rs
src/inspectors/: Transform.rs  UiText.rs  UiTransform.rs
